--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ form input {
 form img {
     position: absolute;
     right: 20px;
-    top: 34px;
+    top: 30px;
     width: 20px;
 }
 
@@ -122,6 +122,10 @@ form button {
     box-shadow: 0 5px 0 hsl(154, 75%, 39%);
 }
 
+form button:hover {
+    cursor: pointer;
+}
+
 form .footer {
     padding: 0 20px 20px 20px;
     color: var(--grayish-blue);
@@ -132,9 +136,6 @@ form .footer {
 form .footer span {
     color: var(--red);
 }
-
-
-
 
 .inactive {
     display: none;
